[project]
name = "agentvj"
version = "0.1.0"
description = "An Agent from Scratch for Demo at TMLS Micro Summit"
authors = [
    {name = "Jaganadh Gopinadhan",email = "jaganadhg@outlook.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.8,<=3.12.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

